Initial commit: QuantumXfer Enterprise v1.0.0
- Complete SSH/SFTP client with modern React interface
- Electron desktop application with portable builds
- Cross-platform support (Windows x64/ARM64, Linux x64/ARM64)
- Enterprise features: session management, SFTP integration, secure auth
- Comprehensive documentation (Installation, Startup guides)
- Ready-to-distribute packages created successfully

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+dist-electron
+dist-packager
 *.local
 
 # Editor directories and files
@@ -28,3 +30,27 @@ dist-ssr
 *.bak
 *_backup.*
 *_broken.*
+
+# Electron build artifacts
+*.exe
+*.dmg
+*.AppImage
+*.deb
+*.rpm
+*.tar.gz
+*.zip
+
+# Environment files
+.env
+.env.test
+.env.local
+.env.production
+
+# Cache directories
+.cache
+.parcel-cache
+.eslintcache
+
+# Release packages (large binary files)
+# Note: Consider using Git LFS for large binary files
+dist-packager/*.zip
