--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (no scripts)
+        run: npm ci --ignore-scripts
 
       - name: Lint
         run: npm run lint
@@ -46,8 +46,8 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (no scripts)
+        run: npm ci --ignore-scripts
 
       - name: Build web assets
         run: npm run build
