--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,18 +24,18 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (no scripts)
+        run: npm ci --ignore-scripts
 
       - name: Build web assets
         run: npm run build
 
-      - name: Build Electron packages
+      - name: Build Electron packages (skip native rebuild)
         run: |
           if [[ "$RUNNER_OS" == "Windows" ]]; then
-            npx electron-builder --win
+            npx electron-builder --win -c.npmRebuild=false
           else
-            npx electron-builder --linux
+            npx electron-builder --linux -c.npmRebuild=false
           fi
         shell: bash
 
