--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,8 @@ jobs:
 
       - name: Electron builder (Linux)
         if: matrix.os == 'ubuntu-latest'
-        run: npx electron-builder --linux --dir -c.npmRebuild=false
+        run: npx electron-builder --linux --dir
 
       - name: Electron builder (Windows)
         if: matrix.os == 'windows-latest'
-        run: npx electron-builder --win --dir -c.npmRebuild=false
+        run: npx electron-builder --win --dir
