--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "electron": "electron .",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5188 && cross-env NODE_ENV=development electron .\"",
     "electron:build": "npm run build && electron-builder",
@@ -41,6 +44,8 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.8",
     "autoprefixer": "^9.8.8",
     "concurrently": "^9.2.0",
     "cross-env": "^10.0.0",
@@ -56,6 +61,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
+    "vitest": "^2.1.8",
     "wait-on": "^8.0.4"
   },
   "build": {
