Add Docker-based SSH test server (Option C) - Issue #85
- Created Docker helper script: tests/scripts/ssh-test-server.js
  - Start/stop/status commands for ghcr.io/linuxserver/openssh-server
  - Container runs on 127.0.0.1:2222 with testuser/testpass
  - Port readiness wait with timeout

- Created test orchestrator: tests/scripts/run-integration-with-ssh.js
  - Starts container, runs tests, always stops container
  - Ensures cleanup even on test failure

- Added npm scripts in package.json:
  - test:ssh-up - Start SSH test server
  - test:ssh-down - Stop SSH test server
  - test:integration:ssh - Run integration tests with Docker SSH

- Updated TESTING-GUIDE.md with Option C Docker workflow
- Created Issue #85 tracking document
- Linked to parent Issue #74 (Functional/Blackbox Testing)

Test Results:
- All 42 integration tests passed (13.15s)
- Tests now run against real OpenSSH server
- No more skipped tests when SSH server available

Parent: Issue #74, Issue #76
Resolves: Issue #85 infrastructure setup

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "test:ssh-up": "node tests/scripts/ssh-test-server.js start",
+    "test:ssh-down": "node tests/scripts/ssh-test-server.js stop",
+    "test:integration:ssh": "node tests/scripts/run-integration-with-ssh.js",
     "electron": "electron .",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5188 && cross-env NODE_ENV=development electron .\"",
     "electron:build": "npm run build && electron-builder",
