[Issue #83] Add E2E testing infrastructure with Playwright
- Install Playwright and electron-playwright-helpers
- Create Playwright configuration for Electron
- Add E2E helpers module with app launch/close utilities
- Implement 7 application startup tests (100% passing)
- Add npm scripts: test:e2e, test:e2e:headed, test:e2e:debug
- Add data-testid to App container for testing
- Tests cover: app launch, window title, container render, dimensions, React loading, graceful close, console errors

Test Results: 7/7 passing (29.7s)
Duration: Application startup tests validate basic Electron functionality

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "test:ssh-up": "node tests/scripts/ssh-test-server.js start",
     "test:ssh-down": "node tests/scripts/ssh-test-server.js stop",
     "test:integration:ssh": "node tests/scripts/run-integration-with-ssh.js",
+      "test:e2e": "playwright test",
+      "test:e2e:headed": "playwright test --headed",
+      "test:e2e:debug": "playwright test --debug",
     "electron": "electron .",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5188 && cross-env NODE_ENV=development electron .\"",
     "electron:build": "npm run build && electron-builder",
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
@@ -55,10 +59,12 @@
     "electron": "^37.3.1",
     "electron-builder": "^26.0.12",
     "electron-packager": "^17.1.2",
+    "electron-playwright-helpers": "^2.0.1",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "playwright": "^1.57.0",
     "postcss": "^7.0.39",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
