[Issue #88] ci: Start Xvfb and run Playwright via xvfb-run on Linux
- Fix Ubuntu E2E failures: Missing X server /
- Start Xvfb on :99 and use xvfb-run to wrap npm test
- Keep non-Linux runs unchanged
- Complements Electron --no-sandbox flags added earlier

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -43,10 +43,21 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y xvfb
       
-      - name: Run E2E tests
+      - name: Start X server (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          export DISPLAY=:99
+          /usr/bin/Xvfb :99 -screen 0 1920x1080x24 -ac +extension GLX +render -noreset &
+          echo "Started Xvfb on :99"
+          sleep 3
+
+      - name: Run E2E tests (Linux)
+        if: runner.os == 'Linux'
+        run: xvfb-run -a --server-args="-screen 0 1920x1080x24" npm run test:e2e
+
+      - name: Run E2E tests (Non-Linux)
+        if: runner.os != 'Linux'
         run: npm run test:e2e
-        env:
-          DISPLAY: ':99'
       
       - name: Upload test results
         if: always()
