[Issue #93] ci: remove push trigger for feature branches to eliminate duplicate runs

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -2,7 +2,7 @@ name: Integration Tests
 
 on:
   push:
-    branches: [ main, 'feature/**' ]
+    branches: [ main ]  # Only run on main to avoid duplicate runs with pull_request
   pull_request:
     branches: [ main ]
 
