--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,7 +2,7 @@ name: E2E Tests
 
 on:
   push:
-    branches: ['main', 'develop', 'feature/**']
+    branches: ['main']  # Only run on main to avoid duplicate runs with pull_request
   pull_request:
     branches: ['main', 'develop']
 
