[Issue #53] feat: Implement structured logging framework with Winston
- Enhance electron/logger.js with Winston for structured JSON logging
- Configure daily log rotation (10MB max, 14-30 day retention)
- Implement sensitive data sanitization for passwords, tokens, keys
- Integrate logging into main.js IPC handlers (SSH operations)
- Add audit logging for connections, commands, and file transfers
- Support multiple log transports: console, file, error, audit
- Include comprehensive LOGGING-GUIDE.md documentation
- Add log level management (debug, info, warn, error)
- Implement log export and analysis utilities

Features:
- Structured JSON format for easy parsing and log analysis
- Automatic redaction of sensitive data
- Exception and rejection handlers
- Child logger support for module-specific contexts
- Performance-optimized asynchronous logging

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:ssh-up": "node tests/scripts/ssh-test-server.js start",
     "test:ssh-down": "node tests/scripts/ssh-test-server.js stop",
     "test:integration:ssh": "node tests/scripts/run-integration-with-ssh.js",
-      "test:e2e": "playwright test",
-      "test:e2e:headed": "playwright test --headed",
-      "test:e2e:debug": "playwright test --debug",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
     "electron": "electron .",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5188 && cross-env NODE_ENV=development electron .\"",
     "electron:build": "npm run build && electron-builder",
@@ -42,7 +42,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "ssh2": "^1.17.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
