--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "@eslint/js": "^9.33.0",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.12",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
@@ -66,6 +69,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jsdom": "^27.3.0",
     "playwright": "^1.57.0",
     "postcss": "^7.0.39",
     "tailwindcss": "^4.1.12",
